--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho Dev. Web - João Vítor Vogel e Rômulo Ferreira</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="tabuleiro">
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+        </div>
+
+        <div class="tabuleiro">
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+    </div>
+
+    <div id="area-jogador-1">
+        <button id="botao-1">Clique aqui</button>
+    </div>
+
+    <div id="area-jogador-2">
+        <button id="botao-2">Clique aqui</button>
+    </div>
+
 </body>
 </html>
