--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
     </div>
 
     <div id="area-jogador-1">
-        <button id="botao-1">Clique aqui</button>
+        <button id="botao-1">jogar dado</button>
     </div>
 
-    <div id="area-jogador-2">
-        <button id="botao-2">Clique aqui</button>
-    </div>
+    <div id="area-jogador-2"></div>
+
 
 </body>
 </html>
