--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div id="area-jogador-1">
-        <button id="botao-1">jogar dado</button>
+        <button id="botao-1">Jogar Dado</button>
     </div>
 
     <div id="area-jogador-2"></div>
