adiciona botão animado e fundo na inicio

--- a/inicio.html
+++ b/inicio.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esbugalhado</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-inicio.css">
 </head>
 <body>
-        <h1 class="titulo-geral">Esbugalhado</h1>
+    <h1 class="titulo-geral">Esbugalhado</h1>
 
-        <a href="game.html"><button id="play">JOGAR AGORA</button></a>
-            
+    <a href="game.html"><button id="play">JOGAR AGORA</button></a>
+
 </body>
 </html>
