adiciona fundo ao tabuleiro

--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="titulo-geral">Esbugalhado</h1>
 
-    <a href="game.html"><button id="play">JOGAR AGORA</button></a>
+    <a href="index.html"><button id="play">JOGAR AGORA</button></a>
 
 </body>
 </html>
