reorganiza nomes dos arquivos

--- a/index.html
+++ b/index.html
@@ -1,43 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalho Dev. Web - João Vítor Vogel e Rômulo Ferreira</title>
+    <title>Esbugalhado</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="tabuleiro">
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-        </div>
+    <h1 class="titulo-geral">Esbugalhado</h1>
 
-        <div class="tabuleiro">
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-            <div class="celula"></div>
-    </div>
-
-    <div id="area-jogador-1">
-        <button id="botao-1">Jogar Dado</button>
-    </div>
-
-    <div id="area-jogador-2"></div>
-
+    <a href="inicio.html"><button id="play">JOGAR AGORA</button></a>
 
 </body>
 </html>
