--- a/inicio.html
+++ b/inicio.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esbugalhado</title>
+    <title>Trabalho Dev. Web - João Vítor Vogel e Rômulo Ferreira</title>
     <link rel="stylesheet" href="style-inicio.css">
 </head>
 <body>
-    <h1 class="titulo-geral">Esbugalhado</h1>
+    <div class="container">
+        <div class="tabuleiro">
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+        </div>
 
-    <a href="index.html"><button id="play">JOGAR AGORA</button></a>
+        <div class="tabuleiro">
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+            <div class="celula"></div>
+    </div>
+
+    <div id="area-jogador-1">
+        <button id="botao-1">Jogar Dado</button>
+    </div>
+
+    <div id="area-jogador-2"></div>
+
 
 </body>
 </html>
